# ITK

Modules/Bridge/ArrayFire/: CMakeLists.txt  README.md  itk-module-init.cmake  itk-module.cmake
Modules/Bridge/ArrayFire/include/: itkArrayFireImageBridge.h  itkArrayFireImageBridge.hxx
Modules/Bridge/ArrayFire/src/: CMakeLists.txt  itkArrayFireImageBridge.cxx
Modules/Bridge/ArrayFire/test/: CMakeLists.txt  itkArrayFireImageBridgeGrayScaleTest.cxx  itkArrayFireImageBridgeRGBTest.cxx
Modules/Bridge/ArrayFire/test/Input/: atlantis.png.md5  house.jpg.md5  man.jpg.md5  spider.jpg.md5  trees_ctm.jpg.md5
